Fix touchable insets for Avatar/Cast toolbar icons

An earlier refactoring set zero-insets for touchable AvatarToolbarButton
instead of insets for TOOLBAR_BUTTON. This API was confusing to use so
SetLayoutInsets was changed and renamed to SetLayoutInsetDelta to make
it easier to use. Callers no longer need to include the call to
GetLayoutInsets(TOOLBAR_BUTTON).

CastToolbarButton having incorrect ink-drops was not a regression but
has always used a 16dp icon in both touchable and non-touchable modes.
This change also calls SetInsetDelta to make up for the missing 8dp.

Bug: chromium:895519
Change-Id: I30595913dfb8a19358d198d9f4e0dbcb37993117
Reviewed-on: https://chromium-review.googlesource.com/c/1281903
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#599765}(cherry picked from commit 921a7118c6f7dc6dfc68236f7b07223655f2b24f [formerly 019423bf4be51d4547a2309741eb666a39a7b718])
Reviewed-on: https://chromium-review.googlesource.com/c/1285321
Reviewed-by: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#74}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: ed63ea8113ced76f20aad0e07d80947b1fbdb86b